<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- configurable strings  -->
<string name="app_name">PARQUTEAM</string>
<string name="facebook_app_id">1404855183112833</string>
<string name="gplus_app_id">AIzaSyCVjrI4c_iVDSf5S-IHe0oGFfmx5mAu2y0</string>
    <string name="path_prefix">/apps/0/download_app</string>
    
    
    
    <string name="https">https</string>
    <string name="host">beta.mximo.com</string>
    <string name="todo">TODO</string>
    <string name="price">price</string>
    <string name="sku">sku</string>
    <string name="total">Total:</string>
    <string name="total_order">Order Subtotal:</string>
    <string name="suggestion">SUGGESTED FOR YOU:</string>
    <string name="bag">ADD TO BAG</string>
    <string name="more_details">MORE DETAILS +</string>
    <string name="checkout">PROCEED TO CHECKOUT</string>
    <string name="continue_shopping">CONTINUE SHOPPING</string>
    <string name="mybag_message">Item added successfully</string>
    <string name="mybag">My Bag</string>
    <string name="edit">EDIT</string>
    <string name="finish">Finish</string>
    <string name="facebook">FACEBOOK</string>
    <string name="offer_note">Sorry, no special offerst at the moment. Check again soon!</string>
    <string name="sch_hint_text">SEARCH ITEM</string>
    <string name="or_search_by_">Or Search by:</string>
    <string name="call_store">Call Store</string>
    <string name="navigate_to_store">Navigate to store</string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="to_payment">CHECKOUT</string>
    <string name="shipping_info_">Shipping Method</string>
    <string name="billing_info_">Billing Info</string>
    <string name="phonenumber">phone number</string>
    <string name="zipcode">zip</string>
    <string name="lastname">Last name</string>
    <string name="firstname">First Name</string>
    <string name="contact_info">contact info:</string>
    <string name="customer_details">Order Info:</string>
    <string name="first_name_with_star">* first name</string>
    <string name="last_name_with_star">* last name</string>
    <string name="email_with_star">* Email</string>
    <string name="country_with_star">* Country</string>
    <string name="state_with_star">* State</string>
    <string name="street_with_star">* street</string>
    <string name="city_with_star">* City</string>
    <string name="phone_with_star">* Phone Number</string>
    <string name="zip">* Zip/Postal</string>
    <string name="order_details">Shipping Info</string>
    <string name="sum_of_order">YOUR ORDER SUMMARY:</string>
    <string name="confirm_sms_and_email">Sign me up for news letters and emails</string>
    <string name="insert_different_address_for_delivery">Ship to a different address</string>
    <string name="address_for_delivery">Shipping Info:</string>
    <string name="insert_different_address_for_payment">Enter different billing address</string>
    <string name="address_for_payment">Billing Info:</string>
    <string name="continue_in_payment">Continue</string>
    <string name="email_incorrect">Please insert valid email address</string>
    <string name="shipping_details">shipping details</string>
    <string name="shipping_method">Choose shipping method:</string>
    <string name="shipping_choose_branch"> Choose branch for personal pickup</string>
    <string name="shipping_add_comments">Add shipping comments</string>
    <string name="shipping_gift_wrapping">Send As Gift</string>
    <string name="shipping_add_blessing">Send As Gift</string>
    <string name="shipping_order_summary">Summary:</string>
    <string name="shipping_product_cost">Products</string>
    <string name="shipping_shipping_cost">Shipping Charges</string>
    <string name="shipping_vat">Tax</string>
    <string name="shipping_sum">sum</string>
    <string name="shipping_pay">Pay</string>
    <string name="order_successful">Order Completed Successfully</string>
    <string name="order_cancelled">Order Cancelled</string>
    <string name="stores">Stores</string>
    <string name="store_list">Stores List</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">email</string>
    <string name="country">Country</string>
    <string name="street">street</string>
    <string name="city">city</string>
    <string name="phone">phone</string>
    <string name="store_hours">Oppenning Hours</string>
    <string name="name">name</string>
    <string name="offers">My Offers</string>
    <string name="bonuses">Offers</string>
    <string name="my_favorites">Wishlist</string>
    <string name="quantity">Qty:</string>
    <string name="item_out_of_stock">SOLD OUT</string>
    <string name="add_to_favorites_message">This item has been added to your wishlist</string>
    <string name="distance_from_current_location">Distance From Current Location</string>
    <string name="close">Close</string>
    <string name="go_to_favorites">Go to wishlist</string>
    <string name="order_now">Order Now</string>
    <string name="shop_now">Shop Now</string>
    <string name="wrap_as_gift">Send as gift</string>
    <string name="exit_title">Exit</string>
    <string name="exit_text">Do you want to exit application?</string>
    <string name="exit">Exit</string>
    <string name="info">Info</string>
    <string name="rate">Rate</string>
    <string name="buy_webview">Order on Site</string>
    <string name="buy_call">Call</string>
    <string name="search_by_toprated">Top Rated</string>
    <string name="search_by_sale">Items on Sale</string>
    <string name="search_by_budget">Price Filter</string>
    <string name="search">Search</string>
    <string name="choose_range">Choose Range</string>
    <string name="incorrect_search_values_message">Please insert valid search parameters</string>
    <string name="general_error">General Error Occured</string>
    <string name="title_search_by_query">Search by Keyword</string>
    <string name="title_search_by_rating">Search By Rating</string>
    <string name="title_search_by_sale">Search by Sale</string>
    <string name="title_search_by_price">Search by price</string>
    <string name="no_items_found_for_search">No Items found for Search </string>
    <string name="ratings">Ratings</string>
    <string name="no_raters">no Ratings</string>
    <string name="loading">Loading ...</string>
    <string name="my_wish_list">My Wishlist</string>
    <string name="terms">Terms of Use</string>
    <string name="more">More</string>
    <string name="euro_currency">€</string>
    <string name="israeli_currency">"₪"</string>
    <string name="gbp_currency">£</string>
    <string name="us_currency">$</string>
    <string name="no_shipping_methods_define_error_message">No shipping details method defined</string>
    <string name="apply">Apply</string>
    <string name="enter_coupon_code">Enter coupon code</string>
    <string name="coupon_code_empty">Coupon Code Empty, please fill in</string>
    <string name="coupon_code_successfully_retrived">Coupon Retrived. Please see updated price</string>
    <string name="promotion">Promotion</string>
    <string name="donation">Donation</string>
    <string name="donation_explanation_text_1">As part of your purchase, </string>
    <string name="donation_explanation_text_2">will donate 5% of your purchase on your behalf to the organization of your choice:</string>
    <string name="donation_select_orginization">Select Organization</string>
    <string name="please_fill_country_text">Please Select Country</string>
    <string name="state_not_relevant">State Not Relevant</string>
    <string name="social">Social</string>
    <string name="choose_category">Choose Category</string>
    <string name="no_products_defined_for_category">No Products Defined For Category</string>
    <string name="select_a">Select a </string>
    <string name="refine">Refine</string>
    <string name="filter_by_category">Filter by Category:</string>
    <string name="refined_showing">Refined: showing </string>
    <string name="prodcuts">"prodcuts"</string>
    <string name="sign_up_for_updates_and_benefits">Sign Up for updates and benefits</string>
    <string name="sign_up">Sign Up</string>
    <string name="registration_successful">Thank you, your details were succesfully stored</string>
    <string name="add_shipping_comments_hint">Add your text here</string>
    <string name="add_gift_comments_hint">Add Gift Message</string>
    <string name="login_title">mximo</string>
    <string name="my_app_preview">My App Preview</string>
    <string name="login_note">To Review your Mobile App in the making please Enter: </string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_a_user_yet_">Not a user yet?</string>
    <string name="go_mobile_today">Go Mobile Today</string>
    <string name="powered_by_">"Powered By "</string>
    <string name="please_select_an_app">Please select an App</string>

</resources>