<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/info_bg"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/topbar" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:textSize="@dimen/app_title_text"
            android:textStyle="bold" >
        </TextView>
    </RelativeLayout>

    <View
        android:id="@+id/sch_list_view_1"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/top_view_line"
        android:background="@color/view_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#66000000"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:shadowColor="#000000"
            android:shadowDx="0.5"
            android:shadowDy="-1"
            android:shadowRadius="1"
            android:text="@string/my_app_preview"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/logo"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autoLink="web"
                android:text="@string/login_note"
                android:textColor="@color/black"
                android:textColorLink="@color/view_line"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/login_edit_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/text"
            android:hint="@string/enter_email_address"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/login_edit_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/text"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/layout_of_checkbox_staging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:visibility="gone" >

            <CheckBox
                android:id="@+id/checkbox_is_stage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:padding="0dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="1"
                android:text="staging"
                android:textColor="@color/black" />
        </LinearLayout>

        <Button
            android:id="@+id/login_btn_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/rounded_corner_black"
            android:onClick="LoginButtonClick"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:gravity="left"
                android:text="@string/not_a_user_yet_"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/id_button_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:layout_marginRight="55dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_corner_gray"
                android:onClick="LoginButtonClick"
                android:text="@string/go_mobile_today"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/powered_by_"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/id_text_view_powered_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:gravity="center_vertical"
                android:text="www.mximo.com"
                android:textColor="@color/view_line"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>