<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:weightSum="1" >

    <include layout="@layout/top_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@drawable/splash_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="11" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:orientation="vertical"
                android:weightSum="4" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/transparent_color" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="@color/gray_for_divider" />

                <TextView
                    android:id="@+id/storeinfo_tvCallStore"
                    style="@style/store_info"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:height="0dp"
                    android:text="@string/call_store" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1" >

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.8dp"
                        android:layout_weight="0.95"
                        android:background="@color/white" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.8dp"
                        android:layout_weight="0.05"
                        android:background="@color/gray_for_divider" />
                </LinearLayout>

                <TextView
                    android:id="@+id/storeinfo_tvNavigate"
                    style="@style/store_info"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:height="0dp"
                    android:text="@string/navigate_to_store" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="@color/gray_for_divider" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/transparent_color" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="@color/gray_for_divider" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:background="@color/white"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.05"
                    android:background="@color/white"
                    android:orientation="vertical" >
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.95"
                    android:background="@color/white"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/storeinfo_tvName"
                            style="@style/store_info"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/name" />

                        <TextView
                            android:id="@+id/storeinfo_tvNamevalue"
                            style="@style/store_info_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="true" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.8dp"
                        android:background="@color/gray_for_divider" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/storeinfo_tvCity"
                            style="@style/store_info"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@color/white"
                            android:text="@string/city" />

                        <TextView
                            android:id="@+id/storeinfo_tvCityValue"
                            style="@style/store_info_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="true" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.8dp"
                        android:background="@color/gray_for_divider" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/storeinfo_tvStreet"
                            style="@style/store_info"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/street" />

                        <TextView
                            android:id="@+id/storeinfo_tvStreetValue"
                            style="@style/store_info_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="true" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.8dp"
                        android:background="@color/gray_for_divider" />

                    <LinearLayout
                        android:id="@+id/storeinfo_llPhone"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/storeinfo_tvPhone"
                            style="@style/store_info"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/phone" />

                        <TextView
                            android:id="@+id/storeinfo_tvPhoneValue"
                            style="@style/store_info_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:singleLine="true" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.8dp"
                        android:background="@color/gray_for_divider" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.5"
                        android:background="@color/white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2.5"
                        android:background="@color/white"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/storeinfo_tvHours"
                            style="@style/store_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/store_hours" />

                        <TextView
                            android:id="@+id/storeinfo_tvHourValue"
                            style="@style/store_info_value"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:maxLines="4" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>